[project]
dependencies = [
  "eclipse-zenoh>=1.6.2",
  "opencv-contrib-python>=4.12.0.88",
  "pillow>=12.0.0",
  "pupil-apriltags>=1.0.4.post11",
  "pytest>=9.0.1",
  "torch>=2.9.0",
  "torchvision>=0.24.0",
  "ultralytics>=8.3.228",
]
description = "Add your description here"
name = "vision"
readme = "README.md"
requires-python = "==3.12.7"
version = "0.1.0"
