[project]
dependencies = [
  "eclipse-zenoh>=1.6.2",
  "opencv-contrib-python>=4.12.0.88",
  "pillow>=12.0.0",
  "pupil-apriltags>=1.0.4.post11",
  "pytest>=9.0.1",
  "torch>=2.9.0",
  "torchvision>=0.24.0",
  "ultralytics>=8.3.228",
  "protobuf>=5.29.3",
  "grpcio-tools>=1.70.1",
]
description = "Vision component for AprilTag and object detection"
name = "vision"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
